--- a/index.html
+++ b/index.html
@@ -4459,7 +4459,7 @@ function renderMenu() {
   highlightGrad.addColorStop(0, 'rgba(255, 255, 255, 0.8)');
   highlightGrad.addColorStop(1, 'rgba(255, 255, 255, 0)');
   ctx.fillStyle = highlightGrad;
-  ctx.fillText('LUCHABRARIAN', W/2, titleY + titleAnim.y);
+  ctx.fillText('THE LUCHABRARIAN', W/2, titleY + titleAnim.y);
   
   ctx.globalAlpha = titleAnim.alpha * menuTransitionAlpha;
   
